[package]
name = "yilan"
version = "0.1.0"
authors = ["Ozgur Murat <zgrmrts@gmail.com>"]
edition = "2018"
description = "Snake game for terminal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# termion = "1.5.6"
crossterm = "0.22.1"
num-traits = "0.2"
rand = "0.8.3"

[package.metadata.bundle]
identifier = "io.github.zgrmrts.yilan"
short_description = "Snake game for terminal"
name = "yilan"
version = "0.1.0"
category = "Game"
